--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -93,7 +93,7 @@
                 android:id="@+id/forgetpassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/blue"
+                android:textColor="@color/black"
                 android:layout_marginBottom="10dp"
                 android:fontFamily="@font/manropesemibold"
                 android:text="@string/forger_password"
@@ -101,7 +101,7 @@
 
             <Button
                 android:id="@+id/btn_L"
-                android:layout_width="269dp"
+                android:layout_width="270dp"
                 android:layout_height="42dp"
                 android:background="@drawable/border"
                 android:fontFamily="@font/manropebold"
