--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -34,125 +34,190 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <LinearLayout
-                    android:id="@+id/ly1"
+                <androidx.cardview.widget.CardView
+                    app:layout_constraintTop_toBottomOf="@+id/title"
+                    app:cardCornerRadius="10dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="vertical"
-                    android:layout_marginBottom="16dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/title">
+                    android:layout_height="wrap_content">
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:id="@+id/ly1"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginBottom="15dp"
-                        android:fontFamily="@font/manropebold"
-                        android:text="Register"
-                        android:textColor="@color/black"
-                        android:textSize="24dp"
+                        android:orientation="vertical"
+                        android:padding="20dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/title" />
+                        app:layout_constraintTop_toBottomOf="@id/title">
 
-                    <EditText
-                        android:id="@+id/fullname"
-                        android:layout_width="match_parent"
-                        android:layout_height="45dp"
-                        android:background="@drawable/border"
-                        android:backgroundTint="@color/white"
-                        android:fontFamily="@font/manroperegular"
-                        android:hint="@string/fullname"
-                        android:textSize="12dp"
-                        android:paddingLeft="10dp" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginBottom="10dp"
+                            android:fontFamily="@font/manropeextrabold"
+                            android:text="Register"
+                            android:textColor="@color/black"
+                            android:textSize="24dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/title" />
 
-                    <EditText
-                        android:id="@+id/email"
-                        android:layout_width="match_parent"
-                        android:layout_height="45dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/border"
-                        android:backgroundTint="@color/white"
-                        android:fontFamily="@font/manroperegular"
-                        android:hint="@string/email"
-                        android:textSize="12dp"
-                        android:paddingLeft="10dp" />
+                        <TextView
+                            android:fontFamily="@font/manropesemibold"
+                            android:text="FullName"
+                            android:layout_marginStart="7dp"
+                            android:textColor="@color/black"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
 
-                    <EditText
-                        android:id="@+id/password"
-                        android:layout_width="match_parent"
-                        android:layout_height="45dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/border"
-                        android:backgroundTint="@color/white"
-                        android:fontFamily="@font/manroperegular"
-                        android:hint="@string/password"
-                        android:textSize="12dp"
-                        android:paddingLeft="10dp"
-                        android:inputType="textPassword"/>
+                        <EditText
+                            android:id="@+id/fullname"
+                            android:layout_width="match_parent"
+                            android:layout_height="45dp"
+                            android:background="@drawable/border"
+                            android:fontFamily="@font/manroperegular"
+                            android:hint="@string/fullname"
+                            android:textSize="12dp"
+                            android:layout_marginBottom="10dp"
+                            android:paddingLeft="10dp" />
 
-                    <EditText
-                        android:id="@+id/confirmpass"
-                        android:layout_width="match_parent"
-                        android:layout_height="45dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/border"
-                        android:backgroundTint="@color/white"
-                        android:fontFamily="@font/manroperegular"
-                        android:hint="@string/confirmpass"
-                        android:textSize="12dp"
-                        android:paddingLeft="10dp"
-                        android:inputType="textPassword"/>
-                </LinearLayout>
+                        <TextView
+                            android:fontFamily="@font/manropesemibold"
+                            android:text="Email Address"
+                            android:layout_marginStart="7dp"
+                            android:textColor="@color/black"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
 
-                <Button
-                    android:id="@+id/btn_R"
-                    android:layout_width="270dp"
-                    android:layout_height="42dp"
-                    android:layout_gravity="center"
-                    android:paddingVertical="0dp"
-                    android:text="Register"
-                    android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:fontFamily="@font/manropebold"
-                    android:textAlignment="center"
-                    android:background="@drawable/border"
-                    app:layout_constraintTop_toBottomOf="@id/ly1"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                        <EditText
+                            android:id="@+id/email"
+                            android:layout_width="match_parent"
+                            android:layout_height="45dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@drawable/border"
+                            android:fontFamily="@font/manroperegular"
+                            android:hint="@string/email"
+                            android:textSize="12dp"
+                            android:paddingLeft="10dp" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center"
-                    app:layout_constraintTop_toBottomOf="@id/btn_R"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent">
+                        <TextView
+                            android:fontFamily="@font/manropesemibold"
+                            android:text="Password"
+                            android:layout_marginStart="7dp"
+                            android:textColor="@color/black"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:paddingBottom="5dp"
-                        android:text="Already have an account?"
-                        android:fontFamily="@font/manroperegular"
-                        android:textSize="12dp"/>
+                        <EditText
+                            android:id="@+id/password"
+                            android:layout_width="match_parent"
+                            android:layout_height="45dp"
+                            android:background="@drawable/border"
+                            android:fontFamily="@font/manroperegular"
+                            android:hint="@string/password"
+                            android:textSize="12dp"
+                            android:paddingLeft="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:inputType="textPassword"/>
 
-                    <TextView
-                        android:id="@+id/txt_login"
-                        android:layout_marginTop="10dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Login"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:fontFamily="@font/manropebold"
-                        android:textColor="@color/blue"/>
-                </LinearLayout>
+                        <TextView
+                            android:fontFamily="@font/manropesemibold"
+                            android:text="Confirm Password"
+                            android:layout_marginStart="7dp"
+                            android:textColor="@color/black"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+
+                        <EditText
+                            android:id="@+id/confirmpass"
+                            android:layout_width="match_parent"
+                            android:layout_height="45dp"
+                            android:background="@drawable/border"
+                            android:fontFamily="@font/manroperegular"
+                            android:hint="@string/confirmpass"
+                            android:textSize="12dp"
+                            android:layout_marginBottom="25dp"
+                            android:paddingLeft="10dp"
+                            android:inputType="textPassword"/>
+
+                        <Button
+                            android:id="@+id/btn_R"
+                            android:layout_width="270dp"
+                            android:layout_height="42dp"
+                            android:background="@drawable/border"
+                            android:fontFamily="@font/manropebold"
+                            android:paddingVertical="0dp"
+                            android:text="Register"
+                            android:layout_marginBottom="25dp"
+                            android:layout_gravity="center"
+                            android:textAlignment="center"
+                            android:textColor="@color/white"
+                            android:textSize="20dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/confirmpass" />
+
+                        <LinearLayout
+                            android:id="@+id/ly2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:layout_marginBottom="10dp"
+                            android:orientation="horizontal"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/btn_R">
+
+                            <ImageView
+                                android:layout_marginEnd="10dp"
+                                android:src="@drawable/search"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"/>
+
+                            <ImageView
+                                android:layout_marginStart="10dp"
+                                android:src="@drawable/facebook"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"/>
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:orientation="horizontal"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/btn_R">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/manroperegular"
+                                android:paddingBottom="5dp"
+                                android:text="Already have an account?"
+                                android:textSize="12dp" />
+
+                            <TextView
+                                android:layout_marginTop="2.3dp"
+                                android:id="@+id/txt_login"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="5dp"
+                                android:layout_marginBottom="5dp"
+                                android:fontFamily="@font/manropesemibold"
+                                android:text="Login"
+                                android:textColor="@color/blue"/>
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
             </LinearLayout>
+
         </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
